added integration tests for AuthService