@@ -1,13 +1,11 @@
-package com.alpaca.unit.service;
+package com.alpaca.integration.service;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
 import com.alpaca.dto.response.AuthResponseDTO;
 import com.alpaca.entity.Profile;
 import com.alpaca.entity.Role;
 import com.alpaca.entity.User;
-import com.alpaca.entity.intermediate.UserRole;
 import com.alpaca.exception.BadRequestException;
 import com.alpaca.exception.UnauthorizedException;
 import com.alpaca.model.UserPrincipal;
@@ -19,41 +17,39 @@ import com.alpaca.security.manager.PasswordManager;
 import com.alpaca.security.oauth2.userinfo.OAuth2UserInfo;
 import com.alpaca.security.oauth2.userinfo.OAuth2UserInfoFactory;
 import com.alpaca.service.impl.AuthServiceImpl;
-import com.alpaca.service.impl.ProfileServiceImpl;
 import com.alpaca.service.impl.RoleServiceImpl;
 import com.alpaca.service.impl.UserServiceImpl;
+import java.util.Collections;
 import java.util.Map;
-import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.transaction.annotation.Transactional;
 
-/** Unit tests for {@link AuthServiceImpl} */
-@ExtendWith(MockitoExtension.class)
-class AuthServiceImplTest {
+/** Integration tests for {@link UserServiceImpl} */
+@SpringBootTest
+@ExtendWith(SpringExtension.class)
+public class AuthServiceImplIT {
 
-  @Mock private RoleServiceImpl roleService;
-  @Mock private UserServiceImpl userService;
-  @Mock private ProfileServiceImpl profileService;
-  @Mock private JJwtManager jJwtManager;
-  @Mock private PasswordManager passwordManager;
+  @Autowired private UserServiceImpl userService;
+  @Autowired private RoleServiceImpl roleService;
+  @Autowired private AuthServiceImpl service;
 
-  @InjectMocks private AuthServiceImpl service;
+  @Autowired private JJwtManager jJwtManager;
+  @Autowired private PasswordManager passwordManager;
 
-  private static final String RAW_PASSWORD = "rawPassword";
-  private static final String MOCKED_JWT = "mocked-jwt-token";
+  private String RAW_PASSWORD;
   private User firstEntity;
   private User secondEntity;
   private User thirdEntity;
   private Role role;
-  private Profile profile;
   private User user;
   private UserPrincipal userDetails;
   private Map<String, Object> attributesVerified;
@@ -67,9 +63,11 @@ class AuthServiceImplTest {
     secondEntity = UserProvider.alternativeEntity();
     thirdEntity = UserProvider.notAllowEntity();
     role = RoleProvider.alternativeEntity();
-    profile = ProfileProvider.alternativeEntity();
     user = UserProvider.alternativeEntity();
+    user.setPassword(passwordManager.encodePassword(secondEntity.getPassword()));
+    RAW_PASSWORD = UserProvider.alternativeEntity().getPassword();
     userDetails = new UserPrincipal(user, null);
+    Profile profile = ProfileProvider.alternativeEntity();
     attributesVerified = UserProvider.createAttributes(secondEntity, profile, true);
     attributesNotVerified = UserProvider.createAttributes(secondEntity, profile, false);
     userInfoGoogle = OAuth2UserInfoFactory.getOAuth2UserInfo("google", attributesVerified);
@@ -94,52 +92,56 @@ class AuthServiceImplTest {
 
   // --- login ---
   @Test
+  @Transactional
   void loginCaseOne() {
-    when(userService.findByEmail(firstEntity.getEmail())).thenReturn(firstEntity);
-    when(passwordManager.matches(firstEntity.getPassword(), firstEntity.getPassword()))
-        .thenReturn(true);
-    when(jJwtManager.createToken(any(UserPrincipal.class))).thenReturn(MOCKED_JWT);
+    roleService.save(
+        new Role(role.getRoleName(), role.getRoleDescription(), Collections.emptySet()));
+    service.register(firstEntity.getEmail(), firstEntity.getPassword());
     AuthResponseDTO response = service.login(firstEntity.getEmail(), firstEntity.getPassword());
     assertNotNull(response);
-    assertEquals(MOCKED_JWT, response.token());
-    verify(userService).findByEmail(firstEntity.getEmail());
-    verify(passwordManager).matches(firstEntity.getPassword(), firstEntity.getPassword());
-    verify(jJwtManager).createToken(any(UserPrincipal.class));
+    assertNotNull(response.token());
+    assertTrue(
+        jJwtManager.isValidToken(
+            jJwtManager.getAllClaims(jJwtManager.validateToken(response.token()))));
   }
 
   // --- register ---
   @Test
+  @Transactional
   void registerCaseOne() {
-    when(userService.existsByEmail(firstEntity.getEmail())).thenReturn(true);
+    roleService.save(
+        new Role(role.getRoleName(), role.getRoleDescription(), Collections.emptySet()));
+    service.register(firstEntity.getEmail(), firstEntity.getPassword());
     assertThrows(
         BadRequestException.class,
         () -> service.register(firstEntity.getEmail(), firstEntity.getPassword()));
-    verify(userService).existsByEmail(firstEntity.getEmail());
   }
 
   @Test
+  @Transactional
   void registerCaseTwo() {
-    secondEntity.setUserRoles(Set.of(new UserRole(secondEntity, role)));
-    when(userService.existsByEmail(secondEntity.getEmail())).thenReturn(false);
-    when(roleService.getUserRoles()).thenReturn(Set.of(role));
-    when(userService.register(any(User.class))).thenReturn(secondEntity);
-    when(userService.findByEmail(secondEntity.getEmail())).thenReturn(secondEntity);
-    when(passwordManager.matches(secondEntity.getPassword(), secondEntity.getPassword()))
-        .thenReturn(true);
-    when(jJwtManager.createToken(any(UserPrincipal.class))).thenReturn(MOCKED_JWT);
+    roleService.save(
+        new Role(role.getRoleName(), role.getRoleDescription(), Collections.emptySet()));
     AuthResponseDTO response =
         service.register(secondEntity.getEmail(), secondEntity.getPassword());
     assertNotNull(response);
-    assertEquals(MOCKED_JWT, response.token());
+    assertTrue(
+        jJwtManager.isValidToken(
+            jJwtManager.getAllClaims(jJwtManager.validateToken(response.token()))));
   }
 
   // --- loadUserByUsername ---
   @Test
+  @Transactional
   void loadUserByUsernameCaseOne() {
-    when(userService.findByEmail(secondEntity.getEmail())).thenReturn(secondEntity);
-    UserDetails loaded = service.loadUserByUsername(secondEntity.getEmail());
+    roleService.save(
+        new Role(role.getRoleName(), role.getRoleDescription(), Collections.emptySet()));
+    User user =
+        userService.register(
+            new User(secondEntity.getEmail(), secondEntity.getPassword(), Collections.emptySet()));
+    UserPrincipal loaded = (UserPrincipal) service.loadUserByUsername(secondEntity.getEmail());
     assertNotNull(loaded);
-    assertEquals(secondEntity.getEmail(), loaded.getUsername());
+    assertEquals(new UserPrincipal(user, null), loaded);
   }
 
   // --- validateUserDetails ---
@@ -164,75 +166,77 @@ class AuthServiceImplTest {
 
   @Test
   void validateUserDetailsCaseFour() {
-    when(passwordManager.matches(RAW_PASSWORD, secondEntity.getPassword())).thenReturn(false);
     assertThrows(
         BadRequestException.class,
-        () -> service.validateUserDetails(RAW_PASSWORD, new UserPrincipal(secondEntity, null)));
+        () -> service.validateUserDetails(RAW_PASSWORD + " ", userDetails));
   }
 
   @Test
   void validateUserDetailsCaseFive() {
-    when(passwordManager.matches(thirdEntity.getPassword(), thirdEntity.getPassword()))
-        .thenReturn(true);
+    String rawPassword = thirdEntity.getPassword();
+    thirdEntity.setPassword(passwordManager.encodePassword(rawPassword));
     assertThrows(
         UnauthorizedException.class,
-        () ->
-            service.validateUserDetails(
-                thirdEntity.getPassword(), new UserPrincipal(thirdEntity, null)));
+        () -> service.validateUserDetails(rawPassword, new UserPrincipal(thirdEntity, null)));
   }
 
   @Test
   void validateUserDetailsCaseSix() {
     User user = UserProvider.createUser(false, true, true, true, true, true);
-    when(passwordManager.matches(user.getPassword(), user.getPassword())).thenReturn(true);
+    String rawPassword = user.getPassword();
+    user.setPassword(passwordManager.encodePassword(rawPassword));
     assertThrows(
         UnauthorizedException.class,
-        () -> service.validateUserDetails(user.getPassword(), new UserPrincipal(user, null)));
+        () -> service.validateUserDetails(rawPassword, new UserPrincipal(user, null)));
   }
 
   @Test
   void validateUserDetailsCaseSeven() {
     User user = UserProvider.createUser(true, false, true, true, true, true);
-    when(passwordManager.matches(user.getPassword(), user.getPassword())).thenReturn(true);
+    String rawPassword = user.getPassword();
+    user.setPassword(passwordManager.encodePassword(rawPassword));
     assertThrows(
         UnauthorizedException.class,
-        () -> service.validateUserDetails(user.getPassword(), new UserPrincipal(user, null)));
+        () -> service.validateUserDetails(rawPassword, new UserPrincipal(user, null)));
   }
 
   @Test
   void validateUserDetailsCaseEight() {
     User user = UserProvider.createUser(true, true, false, true, true, true);
-    when(passwordManager.matches(user.getPassword(), user.getPassword())).thenReturn(true);
+    String rawPassword = user.getPassword();
+    user.setPassword(passwordManager.encodePassword(rawPassword));
     assertThrows(
         UnauthorizedException.class,
-        () -> service.validateUserDetails(user.getPassword(), new UserPrincipal(user, null)));
+        () -> service.validateUserDetails(rawPassword, new UserPrincipal(user, null)));
   }
 
   @Test
   void validateUserDetailsCaseNine() {
     User user = UserProvider.createUser(true, true, true, false, false, false);
-    when(passwordManager.matches(user.getPassword(), user.getPassword())).thenReturn(true);
+    String rawPassword = user.getPassword();
+    user.setPassword(passwordManager.encodePassword(rawPassword));
     assertThrows(
         UnauthorizedException.class,
-        () -> service.validateUserDetails(user.getPassword(), new UserPrincipal(user, null)));
+        () -> service.validateUserDetails(rawPassword, new UserPrincipal(user, null)));
   }
 
   @Test
   void validateUserDetailsCaseTen() {
-    when(passwordManager.matches(userDetails.getPassword(), user.getPassword())).thenReturn(true);
-    UserDetails result = service.validateUserDetails(userDetails.getPassword(), userDetails);
+    UserDetails result = service.validateUserDetails(secondEntity.getPassword(), userDetails);
     assertNotNull(result);
     assertEquals(userDetails, result);
   }
 
   // --- authenticate ---
   @Test
+  @Transactional
   void authenticateCaseOne() {
-    when(userService.findByEmail(user.getEmail())).thenReturn(user);
-    when(passwordManager.matches(user.getPassword(), user.getPassword())).thenReturn(true);
-    Authentication auth = service.authenticate(user.getEmail(), user.getPassword());
+    User newUser =
+        userService.register(new User(user.getEmail(), user.getPassword(), Collections.emptySet()));
+    Authentication auth = service.authenticate(secondEntity.getEmail(), secondEntity.getPassword());
     assertNotNull(auth);
-    assertEquals(new UserPrincipal(user, null), (UserPrincipal) auth.getPrincipal());
+    assertNotNull(auth.getPrincipal());
+    assertEquals(new UserPrincipal(newUser, null), (UserPrincipal) auth.getPrincipal());
   }
 
   // --- registerOrLoginOAuth2 ---
@@ -281,9 +285,10 @@ class AuthServiceImplTest {
   }
 
   @Test
+  @Transactional
   void registerOrLoginOAuth2CaseFive() {
-    when(userService.existsByEmail(userInfoGoogleNotVerified.getEmail())).thenReturn(false);
-    when(userService.register(any())).thenReturn(user);
+    roleService.save(
+        new Role(role.getRoleName(), role.getRoleDescription(), Collections.emptySet()));
     UserPrincipal userPrincipal =
         service.registerOrLoginOAuth2(
             userInfoGoogleNotVerified.getEmail(),
@@ -292,17 +297,17 @@ class AuthServiceImplTest {
             userInfoGoogleNotVerified.getImageUrl(),
             userInfoGoogleNotVerified.getEmailVerified(),
             attributesNotVerified);
+    User newUser = userService.findByEmail(userInfoGoogleNotVerified.getEmail());
     assertNotNull(userPrincipal);
-    assertEquals(new UserPrincipal(user, attributesNotVerified), userPrincipal);
-    verify(userService).existsByEmail(userInfoGoogleNotVerified.getEmail());
-    verify(userService).register(any());
+    assertEquals(new UserPrincipal(newUser, null), userPrincipal);
   }
 
   @Test
+  @Transactional
   void registerOrLoginOAuth2CaseSix() {
-    when(userService.existsByEmail(userInfoGoogle.getEmail())).thenReturn(true);
-    when(userService.findByEmail(userInfoGoogle.getEmail())).thenReturn(user);
-    when(userService.register(any())).thenReturn(user);
+    User newUser =
+        userService.register(
+            new User(secondEntity.getEmail(), secondEntity.getPassword(), Collections.emptySet()));
     UserPrincipal userPrincipal =
         service.registerOrLoginOAuth2(
             userInfoGoogle.getEmail(),
@@ -312,10 +317,7 @@ class AuthServiceImplTest {
             userInfoGoogle.getEmailVerified(),
             attributesVerified);
     assertNotNull(userPrincipal);
-    assertEquals(new UserPrincipal(user, attributesVerified), userPrincipal);
-    verify(userService).existsByEmail(userInfoGoogle.getEmail());
-    verify(userService).findByEmail(userInfoGoogle.getEmail());
-    verify(userService).register(any());
+    assertEquals(new UserPrincipal(newUser, null), userPrincipal);
   }
 
   // --- registerProfile ---
@@ -351,8 +353,10 @@ class AuthServiceImplTest {
   }
 
   @Test
+  @Transactional
   void registerProfileCaseSix() {
-    when(profileService.save(any(Profile.class))).thenReturn(profile);
+    roleService.save(
+        new Role(role.getRoleName(), role.getRoleDescription(), Collections.emptySet()));
     User newUser =
         service.registerProfile(
             user,
@@ -361,8 +365,9 @@ class AuthServiceImplTest {
             userInfoGoogle.getImageUrl());
     assertNotNull(newUser);
     assertNotNull(newUser.getProfile());
-    assertEquals(profile, newUser.getProfile());
-    verify(profileService).save(any(Profile.class));
+    assertEquals(userInfoGoogle.getFirstName(), newUser.getProfile().getFirstName());
+    assertEquals(userInfoGoogle.getLastName(), newUser.getProfile().getLastName());
+    assertEquals(userInfoGoogle.getImageUrl(), newUser.getProfile().getAvatarUrl());
   }
 
   // --- checkExistingUser ---
@@ -374,38 +379,48 @@ class AuthServiceImplTest {
   }
 
   @Test
+  @Transactional
   void checkExistingUserCaseTwo() {
-    user.setGoogleConnected(false);
-    user.setEmailVerified(true);
-    when(userService.register(any(User.class))).thenReturn(user);
-    User newUser = service.checkExistingUser(user, userInfoGoogle.getEmailVerified());
-    assertEquals(user, newUser);
-    verify(userService).register(any(User.class));
+    User beforeUser =
+        userService.register(new User(user.getEmail(), user.getPassword(), Collections.emptySet()));
+    beforeUser.setGoogleConnected(false);
+    beforeUser.setEmailVerified(true);
+    User afterUser = userService.register(beforeUser);
+    User newUser = service.checkExistingUser(afterUser, userInfoGoogle.getEmailVerified());
+    assertEquals(beforeUser.getId(), newUser.getId());
+    assertTrue(newUser.isGoogleConnected());
   }
 
   @Test
+  @Transactional
   void checkExistingUserCaseThree() {
-    user.setGoogleConnected(true);
-    user.setEmailVerified(false);
-    when(userService.register(any(User.class))).thenReturn(user);
-    User newUser = service.checkExistingUser(user, userInfoGoogle.getEmailVerified());
-    assertEquals(user, newUser);
-    verify(userService).register(any(User.class));
+    User beforeUser =
+        userService.register(new User(user.getEmail(), user.getPassword(), Collections.emptySet()));
+    beforeUser.setGoogleConnected(true);
+    beforeUser.setEmailVerified(false);
+    User afterUser = userService.register(beforeUser);
+    User newUser = service.checkExistingUser(afterUser, userInfoGoogle.getEmailVerified());
+    assertEquals(beforeUser.getId(), newUser.getId());
+    assertEquals(userInfoGoogle.getEmailVerified(), newUser.isEmailVerified());
   }
 
   @Test
+  @Transactional
   void checkExistingUserCaseFour() {
     user.setGoogleConnected(true);
     user.setEmailVerified(false);
     User newUser = service.checkExistingUser(user, userInfoGoogleNotVerified.getEmailVerified());
-    assertEquals(user, newUser);
+    assertEquals(user.getId(), newUser.getId());
+    assertEquals(userInfoGoogleNotVerified.getEmailVerified(), newUser.isEmailVerified());
   }
 
   @Test
+  @Transactional
   void checkExistingUserCaseFive() {
     user.setGoogleConnected(true);
     user.setEmailVerified(true);
     User newUser = service.checkExistingUser(user, userInfoGoogle.getEmailVerified());
-    assertEquals(user, newUser);
+    assertEquals(user.getId(), newUser.getId());
+    assertEquals(userInfoGoogle.getEmailVerified(), newUser.isEmailVerified());
   }
 }
